# MyStuff

./: .breakpoints  .replit  Code-Of-Conduct.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
src/: bot.py  main.py
src/static/: manifest.json  script.js  style.css
src/templates/: 404.html  OLDindex.html  getstarted.html
src/templates/accounts/: OLDviewprofile.html  signin.html
src/templates/wip/: browse.html  discord.html  index.html  profile.html  settings.html
static/: script.js  style.css
templates/: 404.html  getstarted.html  index.html
templates/accounts/: OLDsettings.html  settings.html  signin.html  viewprofile.html
templates/wip/: browse.html  index.html  profile.html  settings.html
